// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`what init writes, whole the Pulumi example 1`] = `
{
  "config": 
"# yaml-language-server: $schema=https://raw.githubusercontent.com/sluiceway/sluiceway/main/schema/sluiceway.schema.json
#
# Written by sluiceway init from the files of this repo. Review it before
# you commit it. Every key is explained at https://docs.sluiceway.dev/guides/configuration/

# No stack claims the files in these directories, so a push that changes
# one of them previews every stack:
#   shared/
# When a stack reads one, name it under inputs in that stack's entry:
#
#   stacks:
#     - path: app
#       inputs:
#         - "shared/**"
"
,
  "groups": [
    {
      "lines": [
        "app:prod",
        "network:dev",
        "network:prod",
        "playground:dev",
        "site:prod",
      ],
      "title": "Stacks",
    },
    {
      "lines": [
        "- Load the credentials and the state backend settings of your stacks where the comment in the workflow says, with credentials that can deploy. init writes no credential step it did not find in the repo. Recipes: https://docs.sluiceway.dev/guides/credentials/#recipes",
        "- The workflow scans after a push to main: init could not read the default branch. Change it if yours is another.",
        "- The job runs on ubuntu-latest with timeout-minutes: 60. Raise it when a scan or a deploy of yours takes longer, since one run can hold both. For a self-hosted runner change runs-on, with runner 2.328.0 or newer.",
        "- Review the files, run npx sluiceway check, and commit them. init commits nothing.",
      ],
      "title": "Still to do by a person:",
    },
  ],
  "lines": [
    "Found 5 stacks.",
    "Wrote .github/workflows/deploy-dashboard.yml.",
    "Wrote sluiceway.yaml.",
  ],
  "workflow": 
"# Written by sluiceway init from the files of this repo. Review every step
# before you commit it, and change what init printed it could not know:
# https://docs.sluiceway.dev/guides/example-workflows/#what-to-change
#
# \`@v0\` follows every release until 1.0.0. To review every update yourself,
# pin a full commit SHA instead: https://docs.sluiceway.dev/guides/workflow/#pin-a-commit
name: deploy-dashboard

on:
  push:
    branches: [main]
  schedule:
    - cron: "0 6 * * *"
  workflow_dispatch:
  issues:
    types: [edited]

permissions:
  contents: read
  issues: write
  deployments: write
  actions: write
  pull-requests: read
  checks: write

jobs:
  sluiceway:
    runs-on: ubuntu-latest
    timeout-minutes: 60
    # One run at a time and none dropped. An edit of any other issue gets a
    # group of its own, so it never waits for a scan or a deploy.
    concurrency:
      group: sluiceway-\${{ github.event.issue.number }}
      queue: max
    steps:
      - uses: actions/checkout@v7
      - uses: actions/setup-node@v7
        with:
          node-version: lts/*
          cache: npm
          cache-dependency-path: '**/package-lock.json'
      # Once for every program in the repo, not once per stack.
      - run: npm ci
        working-directory: site
      - uses: pulumi/actions@v7 # without a command this only installs the CLI
        with:
          pulumi-version: ^3.229.0
      # The providers the programs use. The first run fills the cache.
      - uses: actions/cache@v6
        with:
          path: ~/.pulumi/plugins
          key: pulumi-plugins-\${{ runner.os }}-\${{ hashFiles('**/package-lock.json') }}
      # Load your credentials and your state backend settings into the job
      # environment here. Sluiceway passes the environment to the tool and
      # never looks inside. Whatever loads a secret must also mask it. Or
      # name a file of NAME=value lines with the env-file input on the step
      # below, and Sluiceway loads it for the tool and masks every value.
      # It reads the event of the run: it scans, or deploys what a tick asks for.
      # It runs after a step above failed too, and then only says so on the
      # dashboard, so it never looks fresh while no scan could run.
      - uses: sluiceway/sluiceway@v0
        if: \${{ !cancelled() }}
"
,
}
`;

exports[`what init writes, whole the OpenTofu example 1`] = `
{
  "config": 
"# yaml-language-server: $schema=https://raw.githubusercontent.com/sluiceway/sluiceway/main/schema/sluiceway.schema.json
#
# Written by sluiceway init from the files of this repo. Review it before
# you commit it. Every key is explained at https://docs.sluiceway.dev/guides/configuration/

stacks:
  # An OpenTofu root module.
  - path: dns
    tool: opentofu
  # An OpenTofu root module with a var file per stack, each in a workspace of its name.
  - path: network
    name: dev
    tool: opentofu
    options:
      workspace: dev
      varFiles: [dev.tfvars]
  - path: network
    name: prod
    tool: opentofu
    options:
      workspace: prod
      varFiles: [prod.tfvars]
"
,
  "groups": [
    {
      "lines": [
        "dns",
        "network:dev",
        "network:prod",
      ],
      "title": "Stacks",
    },
    {
      "lines": [
        "- Load the credentials and the state backend settings of your stacks where the comment in the workflow says, with credentials that can deploy. init writes no credential step it did not find in the repo. Recipes: https://docs.sluiceway.dev/guides/credentials/#recipes",
        "- network: one stack per var file, each in a workspace of the same name. Change workspace where yours is named otherwise.",
        "- The workflow scans after a push to main: init could not read the default branch. Change it if yours is another.",
        "- The job runs on ubuntu-latest with timeout-minutes: 60. Raise it when a scan or a deploy of yours takes longer, since one run can hold both. For a self-hosted runner change runs-on, with runner 2.328.0 or newer.",
        "- Review the files, run npx sluiceway check, and commit them. init commits nothing.",
      ],
      "title": "Still to do by a person:",
    },
  ],
  "lines": [
    "Found 3 stacks.",
    "Wrote .github/workflows/deploy-dashboard.yml.",
    "Wrote sluiceway.yaml.",
  ],
  "workflow": 
"# Written by sluiceway init from the files of this repo. Review every step
# before you commit it, and change what init printed it could not know:
# https://docs.sluiceway.dev/guides/example-workflows/#what-to-change
#
# \`@v0\` follows every release until 1.0.0. To review every update yourself,
# pin a full commit SHA instead: https://docs.sluiceway.dev/guides/workflow/#pin-a-commit
name: deploy-dashboard

on:
  push:
    branches: [main]
  schedule:
    - cron: "0 6 * * *"
  workflow_dispatch:
  issues:
    types: [edited]

permissions:
  contents: read
  issues: write
  deployments: write
  actions: write
  pull-requests: read
  checks: write

jobs:
  sluiceway:
    runs-on: ubuntu-latest
    timeout-minutes: 60
    # One run at a time and none dropped. An edit of any other issue gets a
    # group of its own, so it never waits for a scan or a deploy.
    concurrency:
      group: sluiceway-\${{ github.event.issue.number }}
      queue: max
    steps:
      - uses: actions/checkout@v7
      - uses: opentofu/setup-opentofu@a1320f892987e89d278cc92dc5adc984fb93aca4 # v2.0.2
        with:
          tofu_version: 1.12.6
          tofu_wrapper: false
      # Load your credentials and your state backend settings into the job
      # environment here. Sluiceway passes the environment to the tool and
      # never looks inside. Whatever loads a secret must also mask it. Or
      # name a file of NAME=value lines with the env-file input on the step
      # below, and Sluiceway loads it for the tool and masks every value.
      # It reads the event of the run: it scans, or deploys what a tick asks for.
      # It runs after a step above failed too, and then only says so on the
      # dashboard, so it never looks fresh while no scan could run.
      - uses: sluiceway/sluiceway@v0
        if: \${{ !cancelled() }}
"
,
}
`;

exports[`what init writes, whole the Helm example 1`] = `
{
  "config": 
"# yaml-language-server: $schema=https://raw.githubusercontent.com/sluiceway/sluiceway/main/schema/sluiceway.schema.json
#
# Written by sluiceway init from the files of this repo. Review it before
# you commit it. Every key is explained at https://docs.sluiceway.dev/guides/configuration/

stacks:
  # A local chart. Set the release and the namespace it runs as, and its
  # values files: init named both after the chart.
  - path: charts/web
    tool: helm
    options:
      release: web
      namespace: web
      chart: .
  # A local chart. Set the release and the namespace it runs as, and its
  # values files: init named both after the chart.
  - path: charts/worker
    tool: helm
    options:
      release: worker
      namespace: worker
      chart: .

# No stack claims the files in these directories, so a push that changes
# one of them previews every stack:
#   web/
#   worker/
# When a stack reads one, name it under inputs in that stack's entry:
#
#   stacks:
#     - path: charts/web
#       inputs:
#         - "web/**"
"
,
  "groups": [
    {
      "lines": [
        "charts/web",
        "charts/worker",
      ],
      "title": "Stacks",
    },
    {
      "lines": [
        "- Load the credentials and the state backend settings of your stacks where the comment in the workflow says, with credentials that can deploy. init writes no credential step it did not find in the repo. Recipes: https://docs.sluiceway.dev/guides/credentials/#recipes",
        "- The job needs a kubeconfig for the cluster: https://docs.sluiceway.dev/guides/credentials/#helm",
        "- sluiceway.yaml names each Helm release and its namespace after the chart: charts/web, charts/worker. Set both to where the release runs, and add its values files. The namespace must exist.",
        "- The workflow scans after a push to main: init could not read the default branch. Change it if yours is another.",
        "- The job runs on ubuntu-latest with timeout-minutes: 60. Raise it when a scan or a deploy of yours takes longer, since one run can hold both. For a self-hosted runner change runs-on, with runner 2.328.0 or newer.",
        "- Review the files, run npx sluiceway check, and commit them. init commits nothing.",
      ],
      "title": "Still to do by a person:",
    },
  ],
  "lines": [
    "Found 2 stacks.",
    "Wrote .github/workflows/deploy-dashboard.yml.",
    "Wrote sluiceway.yaml.",
  ],
  "workflow": 
"# Written by sluiceway init from the files of this repo. Review every step
# before you commit it, and change what init printed it could not know:
# https://docs.sluiceway.dev/guides/example-workflows/#what-to-change
#
# \`@v0\` follows every release until 1.0.0. To review every update yourself,
# pin a full commit SHA instead: https://docs.sluiceway.dev/guides/workflow/#pin-a-commit
name: deploy-dashboard

on:
  push:
    branches: [main]
  schedule:
    - cron: "0 6 * * *"
  workflow_dispatch:
  issues:
    types: [edited]

permissions:
  contents: read
  issues: write
  deployments: write
  actions: write
  pull-requests: read
  checks: write

jobs:
  sluiceway:
    runs-on: ubuntu-latest
    timeout-minutes: 60
    # One run at a time and none dropped. An edit of any other issue gets a
    # group of its own, so it never waits for a scan or a deploy.
    concurrency:
      group: sluiceway-\${{ github.event.issue.number }}
      queue: max
    steps:
      - uses: actions/checkout@v7
      - uses: azure/setup-helm@9bc31f4ebc9c6b171d7bfbaa5d006ae7abdb4310 # v5.0.1
        with:
          version: v4.3.0
      - name: Install the diff plugin
        run: helm plugin install https://github.com/databus23/helm-diff --version v3.15.13 --verify=false
      # Load your credentials and your state backend settings into the job
      # environment here. Sluiceway passes the environment to the tool and
      # never looks inside. Whatever loads a secret must also mask it. Or
      # name a file of NAME=value lines with the env-file input on the step
      # below, and Sluiceway loads it for the tool and masks every value.
      # It reads the event of the run: it scans, or deploys what a tick asks for.
      # It runs after a step above failed too, and then only says so on the
      # dashboard, so it never looks fresh while no scan could run.
      - uses: sluiceway/sluiceway@v0
        if: \${{ !cancelled() }}
"
,
}
`;

exports[`what init writes, whole the three examples in one repo 1`] = `
{
  "config": 
"# yaml-language-server: $schema=https://raw.githubusercontent.com/sluiceway/sluiceway/main/schema/sluiceway.schema.json
#
# Written by sluiceway init from the files of this repo. Review it before
# you commit it. Every key is explained at https://docs.sluiceway.dev/guides/configuration/

stacks:
  # An OpenTofu root module.
  - path: tofu/dns
    tool: opentofu
  # An OpenTofu root module with a var file per stack, each in a workspace of its name.
  - path: tofu/network
    name: dev
    tool: opentofu
    options:
      workspace: dev
      varFiles: [dev.tfvars]
  - path: tofu/network
    name: prod
    tool: opentofu
    options:
      workspace: prod
      varFiles: [prod.tfvars]
  # A local chart. Set the release and the namespace it runs as, and its
  # values files: init named both after the chart.
  - path: helm/charts/web
    tool: helm
    options:
      release: web
      namespace: web
      chart: .
  # A local chart. Set the release and the namespace it runs as, and its
  # values files: init named both after the chart.
  - path: helm/charts/worker
    tool: helm
    options:
      release: worker
      namespace: worker
      chart: .

# No stack claims the files in these directories, so a push that changes
# one of them previews every stack:
#   helm/web/
#   helm/worker/
#   pulumi/shared/
# When a stack reads one, name it under inputs in that stack's entry:
#
#   stacks:
#     - path: helm/charts/web
#       inputs:
#         - "helm/web/**"
"
,
  "groups": [
    {
      "lines": [
        "helm/charts/web",
        "helm/charts/worker",
        "pulumi/app:prod",
        "pulumi/network:dev",
        "pulumi/network:prod",
        "pulumi/playground:dev",
        "pulumi/site:prod",
        "tofu/dns",
        "tofu/network:dev",
        "tofu/network:prod",
      ],
      "title": "Stacks",
    },
    {
      "lines": [
        "- Load the credentials and the state backend settings of your stacks where the comment in the workflow says, with credentials that can deploy. init writes no credential step it did not find in the repo. Recipes: https://docs.sluiceway.dev/guides/credentials/#recipes",
        "- The job needs a kubeconfig for the cluster: https://docs.sluiceway.dev/guides/credentials/#helm",
        "- sluiceway.yaml names each Helm release and its namespace after the chart: helm/charts/web, helm/charts/worker. Set both to where the release runs, and add its values files. The namespace must exist.",
        "- tofu/network: one stack per var file, each in a workspace of the same name. Change workspace where yours is named otherwise.",
        "- The workflow scans after a push to main: init could not read the default branch. Change it if yours is another.",
        "- The job runs on ubuntu-latest with timeout-minutes: 60. Raise it when a scan or a deploy of yours takes longer, since one run can hold both. For a self-hosted runner change runs-on, with runner 2.328.0 or newer.",
        "- Review the files, run npx sluiceway check, and commit them. init commits nothing.",
      ],
      "title": "Still to do by a person:",
    },
  ],
  "lines": [
    "Found 10 stacks.",
    "Wrote .github/workflows/deploy-dashboard.yml.",
    "Wrote sluiceway.yaml.",
  ],
  "workflow": 
"# Written by sluiceway init from the files of this repo. Review every step
# before you commit it, and change what init printed it could not know:
# https://docs.sluiceway.dev/guides/example-workflows/#what-to-change
#
# \`@v0\` follows every release until 1.0.0. To review every update yourself,
# pin a full commit SHA instead: https://docs.sluiceway.dev/guides/workflow/#pin-a-commit
name: deploy-dashboard

on:
  push:
    branches: [main]
  schedule:
    - cron: "0 6 * * *"
  workflow_dispatch:
  issues:
    types: [edited]

permissions:
  contents: read
  issues: write
  deployments: write
  actions: write
  pull-requests: read
  checks: write

jobs:
  sluiceway:
    runs-on: ubuntu-latest
    timeout-minutes: 60
    # One run at a time and none dropped. An edit of any other issue gets a
    # group of its own, so it never waits for a scan or a deploy.
    concurrency:
      group: sluiceway-\${{ github.event.issue.number }}
      queue: max
    steps:
      - uses: actions/checkout@v7
      - uses: actions/setup-node@v7
        with:
          node-version: lts/*
          cache: npm
          cache-dependency-path: '**/package-lock.json'
      # Once for every program in the repo, not once per stack.
      - run: npm ci
        working-directory: pulumi/site
      - uses: pulumi/actions@v7 # without a command this only installs the CLI
        with:
          pulumi-version: ^3.229.0
      # The providers the programs use. The first run fills the cache.
      - uses: actions/cache@v6
        with:
          path: ~/.pulumi/plugins
          key: pulumi-plugins-\${{ runner.os }}-\${{ hashFiles('**/package-lock.json') }}
      - uses: opentofu/setup-opentofu@a1320f892987e89d278cc92dc5adc984fb93aca4 # v2.0.2
        with:
          tofu_version: 1.12.6
          tofu_wrapper: false
      - uses: azure/setup-helm@9bc31f4ebc9c6b171d7bfbaa5d006ae7abdb4310 # v5.0.1
        with:
          version: v4.3.0
      - name: Install the diff plugin
        run: helm plugin install https://github.com/databus23/helm-diff --version v3.15.13 --verify=false
      # Load your credentials and your state backend settings into the job
      # environment here. Sluiceway passes the environment to the tool and
      # never looks inside. Whatever loads a secret must also mask it. Or
      # name a file of NAME=value lines with the env-file input on the step
      # below, and Sluiceway loads it for the tool and masks every value.
      # It reads the event of the run: it scans, or deploys what a tick asks for.
      # It runs after a step above failed too, and then only says so on the
      # dashboard, so it never looks fresh while no scan could run.
      - uses: sluiceway/sluiceway@v0
        if: \${{ !cancelled() }}
"
,
}
`;
